--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 	Author: Tanner Garrett
 	Date: 10/2/2014
 	TA: Zachary Balter
-	This document allows for all stylistic parts of an informative page on Alan Alda. All extra content will be seperated by a space and positioned at the bottom of each rule.
+	This document allows for all stylistic parts of an informative page on Captain "Hawkeye" Pierce. All extra content will be seperated by a space and positioned at the bottom of each rule.
 */
 
 body {
